tests/fixtures/invalid/pow_set_bool_str.py
# Cannot call pow() with Set[int], Bool, Str
x = pow({1, 2, 3}, True, "hello")
